# PyLongslit

./: .buildinfo  .gitignore  1d_extraction.uxf  AB.html  README.md  TODO.txt  bias.html  calibrate.html  check_config.py  combine.py  combine_arcs.html  combine_arcs.py  combine_spec.html  config.json  config_OB0001.json  config_OB0016.json  config_OB0019.json  config_OSIRIS.json  config_SDSS_R1000B.json  config_alfosc.json  config_la_emitter.json  config_lensed.json  configuration_file.html  contact.html  crop.html  crop.py  crr.html  crremoval.py  dark_current.html  develop.html  extract_1d.html  extract_1d.py  extract_1d_new.py  extract_simple_1d.py  flat.html  flux_calibrate.py  general_notes.html  genindex.html  getting_started.html  identify.html  (+44 more)
.doctrees/: AB.doctree  bias.doctree  calibrate.doctree  combine_arcs.doctree  combine_spec.doctree  configuration_file.doctree  contact.doctree  crop.doctree  crr.doctree  dark_current.doctree  environment.pickle  extract_1d.doctree  flat.doctree  general_notes.doctree  getting_started.doctree  identify.doctree  index.doctree  installation.doctree  objtrace.doctree  pipeline.doctree  pipeline_diagram.doctree  pre_processing.doctree  reduce.doctree  sensfunction.doctree  setup.doctree  show_2dspec.doctree  sky.doctree  standard.doctree  structure.doctree  uncertainties.doctree  wavecalib.doctree
OB0001/: ._GTCMULTIPLE2H-24B_0001_qc.txt  GTCMULTIPLE2H-24B_0001_qc.txt
_sources/: AB.rst.txt  calibrate.rst.txt  combine_arcs.rst.txt  crop.rst.txt  crr.rst.txt  develop.rst.txt  general_notes.rst.txt  identify.rst.txt  index.rst.txt  installation.rst.txt  reduce.rst.txt  sky.rst.txt  tested_instruments.rst.txt  wavecalib.rst.txt
config_files/: config_alfosc.json  config_la_emitter.json
depricated/: extract_1d.py
docs/: AB.rst  bias.rst  calibrate.rst  combine_arcs.rst  combine_spec.rst  conf.py  configuration_file.rst  crop.rst  crr.rst  dark_current.rst  extract_1d.rst  flat.rst  getting_started.rst  identify.rst  index.rst  installation.rst  objtrace.rst  reduce.rst  sensfunction.rst  show_2dspec.rst  sky.rst  special_use_cases.rst  tested_instruments.rst  uncertainties.rst  utils.py  wavecalib.rst
lensed_out/: good_lines.pkl  plot_uncalibed.py  reduced_science_0004799976-20241004-OSIRIS-OsirisLongSlitSpectroscopy.fits  reduced_science_0004799977-20241004-OSIRIS-OsirisLongSlitSpectroscopy.fits  reduced_science_0004799978-20241004-OSIRIS-OsirisLongSlitSpectroscopy.fits  tilt_fit.pkl  wavelen_fit.pkl  (+5 more)
(+224 files in other folders)
