[metadata]
name = pylongslit
author = Kostas Valeckas
version = 1.0.9
author_email = kostas.valeckas@nbi.ku.dk
description = PyLongslit is a simple manual Python pipeline for processing astronomical long-slit spectra recorded with CCD detectors.
long_description = file: README.md
url = https://kostasvaleckas.github.io/PyLongslit/
license = MIT
license_files = LICENSE.txt
project_urls =
    Documentation = https://kostasvaleckas.github.io/PyLongslit/
    Source = https://github.com/KostasValeckas/PyLongslit/
    Tracker = https://github.com/KostasValeckas/PyLongslit/issues/
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    astropy
    astroscrappy
    colorama
    matplotlib
    numpy
    pandas
    photutils
    pyastronomy
    PyQt5
    pytest
    Requests
    scikit_learn
    scipy
    setuptools
    scikit-image
    tabulate
    tqdm
        
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx
    sphinx-rtd-theme

test =
    pytest
    pytest-order

all =
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    pylongslit_check_config = pylongslit.check_config:main
    pylongslit_bias = pylongslit.mkspecbias:main
    pylongslit_wavecalib = pylongslit.wavecalib:main
    pylongslit_identify_arcs = pylongslit.identify:main
    pylongslit_combine_arcs = pylongslit.combine_arcs:main
    pylongslit_flat = pylongslit.mkspecflat:main
    pylongslit_crr = pylongslit.crremoval:main
    pylongslit_reduce = pylongslit.reduce:main
    pylongslit_subtract_background = pylongslit.subtract_background:main
    pylongslit_crop = pylongslit.crop:main
    pylongslit_sky_subtract = pylongslit.skysubtract:main
    pylongslit_2dspec = pylongslit.spec_viewer:main
    pylongslit_objtrace = pylongslit.obj_trace:main
    pylongslit_objtrace_cloned = pylongslit.obj_trace_clone:main
    pylongslit_objtrace_manual = pylongslit.obj_trace_manual:main
    pylongslit_extract_1d = pylongslit.extract_1d:main
    pylongslit_extract_simple_1d = pylongslit.extract_simple_1d:main
    pylongslit_sensitivity_function = pylongslit.sensitivity_function:main
    pylongslit_flux = pylongslit.flux_calibrate:main
    pylongslit_combine_spec = pylongslit.combine:main
